# sw_battle_test

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  main.cpp
docs/: ecs.plantuml.txt
src/: CMakeLists.txt  Common.hpp  Debug.cpp  Debug.hpp  main.cpp
src/ECS/: Component.hpp  ComponentIndex.hpp  Context.cpp  Context.hpp  Entity.hpp  EventDispatcher.hpp  System.hpp
src/Game/: CommandBased.hpp  DamageType.hpp  GameApp.cpp  GameApp.hpp  Interpreter.hpp  UnitType.hpp
src/Game/Commands/: DamageCommand.hpp  MoveCommand.hpp
src/Game/Components/: BehaviourComponent.hpp  DamageTakerComponent.hpp  GridComponent.hpp  MeleeAttackComponent.hpp  MovementComponent.hpp  RangeAttackComponent.hpp  UnitComponent.hpp  UnitMovementComponent.hpp  ViewerComponent.hpp  VisibleComponent.hpp  WeaponComponent.hpp
src/Game/Events/: ActivateWeaponEvent.hpp  DamageEvent.hpp  DeathEvent.hpp  MovementTargetEvent.hpp  SetMovementActiveEvent.hpp  SetMovementBoundsEvent.hpp  SetMovementEvent.hpp  SetMovementTargetEvent.hpp  SpawnUnitEvent.hpp  UseWeaponEvent.hpp
src/IO/Commands/: March.hpp  (+7 more)
src/Math/: Algo.hpp  Rect2.hpp  Vector2.hpp  Vector2D.hpp
src/Scheme/: Abilities.hpp  AttackType.hpp  Attributes.cpp  Attributes.hpp  Units.cpp  Units.hpp
tests/: CMakeLists.txt  ecs_test.cpp  entitymapping_test.cpp  esc_test.cpp  game_test.cpp  game_test_fixture.hpp  hunter_test.cpp  main_test.cpp  math_makevelocity_test.cpp  math_test.cpp
viewer/: CMakeLists.txt  GameSceneWidget.cpp  GameSceneWidget.hpp  ViewerMainWindow.cpp  ViewerMainWindow.hpp  main.cpp
viewer/resources/: resources.qrc
(+30 files in other folders)
